--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,107 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,300;1,400;1,500&display=swap");
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 .App {
-  text-align: center;
+  height: 100vh;
+  width: 100vw;
+  font-family: "Roboto";
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main-section {
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
+  height: 80vh;
+  width: 80vw;
+  background-image: url("./assets/Scene.svg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.car-modal {
+  position: absolute;
+  left: 3rem;
+  bottom: 1rem;
+  width: 43vw;
+  height: 40vh;
+  background-image: url("./assets/mobel.svg");
+  background-position: start;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.list {
+  background: #fff;
+  height: 80%;
+  width: 40%;
+  border-radius: 1rem;
+}
+
+.list-item {
+  display: flex;
+  padding: 2rem;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  font-size: large;
+}
+
+.list-item div {
+  text-align: left;
+}
+
+.list-item button {
+  cursor: pointer;
+  padding: 0.4rem;
+  margin: 0 0.5rem;
+  border-radius: 50%;
+  border: none;
+  color: #fff;
+  background-color: #ee4d47;
+}
+
+.buttons {
+  display: flex;
+  width: 15%;
+  align-items: center;
+  justify-content: end;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  height: 80%;
+}
+
+.form-input {
+  width: 100%;
+  padding: 1rem 1.4rem;
+  margin: 0 1rem 1rem 1rem;
+  font-size: 1.2rem;
+  font-weight: 800;
+  border-radius: 1rem;
+  outline: none;
+  border: none;
+}
+
+.form-button {
+  width: 50%;
+  padding: 1.2rem 1.6rem;
+  font-size: 1rem;
+  font-weight: 700;
+  margin: 0.5rem auto;
+  color: #fff;
+  background-color: #ee4d47;
+  border: none;
+  border-radius: 0.2rem;
+  cursor: pointer;
 }
